# mcp-fs

./: Cargo.toml  README.md
assets/: diff.css  diff.html  syntect.css
assets/ui/browser/: app.css  app.js  index.html
frontend/: vite.config.ts
frontend/src/: App.vue  TreeNodeItem.vue  style.css  types.ts
src/: fs.rs  main.rs  protocol.rs  server.rs
tests/: integration.rs
